# Robustone

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  PLAN_formal1.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: support-matrix.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_loongarch.rs  decode_riscv.rs  format_riscv_text.rs
robustone/: Cargo.toml
robustone-arm/: Cargo.toml
robustone-arm/src/: backend.rs  decoder.rs  lib.rs  render.rs
robustone-arm/tests/: spec_validation.rs
robustone-capstone-compat/: Cargo.toml
robustone-capstone-compat/src/: adapter.rs  harness.rs  lib.rs  xfail.rs  yaml.rs
robustone-cli/src/: arch.rs  capabilities.rs  command.rs  config.rs  disasm.rs  executor.rs  tests.rs  version_info.rs
robustone-core/: Cargo.toml
robustone-core/benches/: riscv_decode.rs
robustone-core/src/: architecture.rs  decode_config.rs  ir.rs  lib.rs  render.rs  renderer.rs
robustone-core/src/common/: profile.rs
robustone-core/src/traits/: architecture.rs  instruction.rs  mod.rs
robustone-core/src/types/: error.rs  instruction.rs
robustone-core/tests/: golden_riscv.rs  property_riscv.rs  support_matrix_sync.rs
robustone-isa/: Cargo.toml
robustone-isa-macros/: Cargo.toml
robustone-isa-macros/src/: lib.rs
robustone-isa/benches/: decode.rs
robustone-isa/src/: lib.rs  mock.rs
robustone-isa/tests/: proc_macro.rs  send_sync.rs
robustone-loongarch/: Cargo.toml
robustone-loongarch/src/: backend.rs  decoder.rs  lib.rs  patterns.rs  printer.rs  render.rs  types.rs
robustone-loongarch/src/backend/: aliases.rs  capstone_specs.rs  specs_float_arith.rs  specs_float_cmp.rs  specs_float_mem.rs  specs_integer.rs  specs_lbt.rs  specs_remaining.rs  specs_system.rs  specs_vector.rs
robustone-loongarch/src/extensions/: atomic.rs  base.rs  branch.rs  float.rs  memory.rs  misc.rs  mod.rs  vector.rs
robustone-loongarch/src/shared/: operands.rs
robustone-loongarch/tests/: behavior_snapshot.rs  spec_validation.rs
robustone-riscv/: Cargo.toml
robustone-riscv/src/: aliases.rs  arch.rs  backend.rs  decoder.rs  lib.rs  patterns.rs  printer.rs  render.rs  types.rs
robustone-riscv/src/backend/: specs_a.rs  specs_c.rs  specs_d.rs  specs_f.rs  specs_i.rs  specs_m.rs  specs_system.rs  specs_thead.rs
robustone-riscv/src/extensions/: mod.rs
robustone-riscv/src/extensions/standard/: rvc.rs  rvi.rs
robustone-riscv/src/extensions/thead/: condmov.rs
robustone-riscv/src/shared/: csr.rs  decoder_utils.rs  encoding.rs  formatting.rs  mod.rs  operands.rs
robustone-riscv/tests/: behavior_snapshot.rs  dispatch.rs  spec_validation.rs
robustone-x86/: Cargo.toml
robustone-x86/src/: backend.rs  decoder.rs  lib.rs  render.rs
robustone-x86/tests/: spec_validation.rs
robustone/src/: lib.rs  main.rs
robustone/tests/: property_riscv.rs
scripts/: generate_loongarch_patterns.py
test/architectures/capstone-loongarch-mc/: config.json
test/core/: comparator.py  test_runner.py
tests/golden/riscv/: prefetch_i.json  prefetch_r.json  prefetch_w.json
xtask/: Cargo.toml
xtask/src/: main.rs
