[package]
name = "robustone-core"
version = "0.0.0"
edition = "2024"

[dependencies]
hex = "0.4"
bitflags = "2.10.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3.24"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.5"
inventory = "0.3.24"
proptest = "1.5"
robustone = { path = "../robustone" }

[[bench]]
name = "riscv_decode"
harness = false
