[package]
name = "robustone-isa"
version = "0.1.0"
edition = "2024"

[dependencies]
robustone-core = { path = "../robustone-core" }
robustone-isa-macros = { path = "../robustone-isa-macros" }
bitflags = "2"

[features]
default = ["std"]
std = []

[dev-dependencies]
robustone-core = { path = "../robustone-core" }
