[package]
name = "robustone-x86"
version = "0.1.0"
edition = "2024"
description = "x86/x64 architecture support for Robustone"

[dependencies]
bitflags = "2"
inventory = "0.3.24"
robustone-core = { path = "../robustone-core" }
robustone-isa = { path = "../robustone-isa" }
robustone-isa-macros = { path = "../robustone-isa-macros" }
